--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -12,6 +12,11 @@ div {
   width: 80%;
   margin: 0 auto;
 }
+audio {
+  background: #000;
+  color: red;
+  margin: 20px 0px;
+}
 input {
   width: 100%;
   margin: 10px;
