--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,37 +1,119 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Coda+Caption:wght@800&family=Passion+One&display=swap");
+
+.search * {
   margin: 0;
   padding: 0;
 }
-h1 {
+.search .header {
   color: #4286f4;
-  margin-top: 30px;
   margin-bottom: 60px;
+  font-family: "Modak", cursive;
+  font-size: 4em;
+  position: relative;
+  top: 40px;
+  right: 10px;
 }
-div {
+.search div {
   text-align: center;
   width: 80%;
-  margin: 0 auto;
 }
-audio {
-  background: #000;
-  color: red;
-  margin: 20px 0px;
+.search audio {
+  width: 50%;
+  align-self: center;
 }
-input {
-  width: 100%;
-  margin: 10px;
+.full-track {
+  text-decoration: none;
+  text-align: center;
+  margin-left: 28%;
+  font-family: "Modak", cursive;
+  color: #fff;
+  font-size: 16px;
+  font-family: "Passion One", cursive;
+  text-transform: uppercase;
+}
+.search input {
+  width: 70%;
+  margin-bottom: 10px;
+  margin-right: 15px;
   padding: 18px 10px;
   border-radius: 4px;
   border: 1px solid #4e5766;
   box-shadow: 1px 0.5px #888888;
   font-size: 18px;
 }
-button {
+.search button {
   padding: 12px 10px;
   width: 30%;
   border-radius: 4px;
   background-color: #4286f4;
   color: #ffffff;
+  font-weight: bold;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 22px;
+  margin: 10px 0px;
+  margin-right: 15px;
+}
+
+#songs {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.song-title {
+  font-family: "Bungee Shade", cursive;
+  color: #fff;
+  font-weight: bold;
+  font-size: 26px;
+  margin-top: 40px;
+}
+.hidden {
+  visibility: hidden;
+}
+
+#show {
+  visibility: visible;
+}
+.search-container {
+  border-radius: 4px;
+  border: 2px solid #000;
+  margin: 20px 0px;
+  position: relative;
+  left: 23% !important;
+  background: #4286f4;
+  padding: 0px 5px;
+}
+.nextPrevBtns {
+  display: flex;
+  justify-content: center;
+}
+.nextPrevBtns {
+  margin-left: 11%;
+}
+@media only screen and (max-width: 600px) {
+  .search .song-title {
+    font-size: 22px;
+  }
+  .search .header {
+    font-size: 34px;
+  }
+  .full-track {
+    font-size: 13px;
+  }
+}
+
+.search-container {
+  left: 10%;
+}
+
+@media only screen and (max-width: 320px) {
+  .search .song-title {
+    font-size: 20px;
+  }
+  .search .header {
+    font-size: 30px;
+  }
+  .full-track {
+    font-size: 11px;
+  }
 }
