--- a/src/components/random.css
+++ b/src/components/random.css
@@ -8,8 +8,31 @@
   border-radius: 4px;
   border: 2px solid #000;
   margin: 20px 0px;
-  position: relative;
-  left: 23% !important;
   background: #4286f4;
   padding: 0px 5px;
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+}
+
+.random {
+  align-self: center;
+}
+
+.random-header {
+  color: #4286f4;
+  font-family: "Modak", cursive;
+  font-size: 4em;
+}
+
+.random-track {
+  text-decoration: none;
+  text-align: center;
+  font-family: "Modak", cursive;
+  color: #fff;
+  font-size: 16px;
+  position: relative;
+  top: 10px;
+  font-family: "Passion One", cursive;
+  text-transform: uppercase;
 }
