added code to header

--- a/src/random.css
+++ b/src/random.css
@@ -2,7 +2,7 @@
     text-align: center;
     background-color: rgb(255, 2, 2);
     font-size: 25;
-    border-bottom-
-
+    border-bottom-color: blue;
+    background: https://thirdmonk.net/postcont/2014/04/Einstien-Canvas-Painting.jpg;
 
 }
