added new refresh button to random, next and previous buttons to videos, and made a few other updates

--- a/src/components/Artists.css
+++ b/src/components/Artists.css
@@ -7,6 +7,9 @@
   font-family: "Modak", cursive;
   font-size: 3em;
 }
+.artistName {
+  background: #333;
+}
 .artists {
   display: flex;
   justify-content: space-around;
