--- a/src/components/random.css
+++ b/src/components/random.css
@@ -55,7 +55,7 @@
 }
 
 body {
-  background-image: url("images/musicAPI2.gif");
+  background-image: url("images/bg4.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
