--- a/src/components/Artists.css
+++ b/src/components/Artists.css
@@ -6,16 +6,17 @@
   color: #fff;
   font-family: "Modak", cursive;
   font-size: 3em;
+  background: rgb(66, 134, 244, 0.7);
 }
-
+.artists .para {
+  right: 50px;
+}
 .artists {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
-.artist-container {
-  background-color: #4286f4;
-}
+
 .artists img {
   width: 103%;
   height: auto;
@@ -25,6 +26,14 @@
   color: #4286f4;
   font-family: "Modak", cursive;
   font-size: 4em;
+  color: #fff !important;
+  width: 60%;
+  position: relative;
+  right: 1%;
+  border: 1px solid #4286f4;
+  border-radius: 5px;
+  text-align: center;
+  background: rgb(66, 134, 244, 0.7);
 }
 
 .padding {
@@ -34,5 +43,11 @@
 @media only screen and (max-width: 600px) {
   .artists img {
     width: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .artist-header {
+    font-size: 34px;
   }
 }
