--- a/src/components/random.css
+++ b/src/components/random.css
@@ -48,16 +48,29 @@
   text-transform: uppercase;
 }
 
-#para {
+.para {
   /* text-align: center; */
-  background-color: rgb(255, 2, 2);
-  border-bottom-color: gold;
+  /*  background-color: rgb(255, 2, 2);
+ /*  border-bottom-color: gold;/*/
+  color: #fff !important;
+  width: 60%;
+  position: relative;
+  left: 20%;
+  border: 1px solid #4286f4;
+  border-radius: 5px;
+  text-align: center;
+  background: rgb(66, 134, 244, 0.7);
 }
-
 body {
   background-image: url("images/bg4.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .para {
+    font-size: 34px;
+  }
 }
