--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -1,3 +1,14 @@
 .videos a {
   display: block;
 }
+iframe {
+  max-width: 100%;
+  width: 560px;
+  height: 315px;
+}
+@media only screen and (max-width: 600px) {
+  iframe {
+    width: 300px;
+    height: 200px;
+  }
+}
