--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   .song-title {
-    font-size: 18px !important;
+    font-size: 12px !important;
+    margin-top: 10px;
   }
 }
