--- a/src/components/random.css
+++ b/src/components/random.css
@@ -8,7 +8,7 @@
   border-radius: 4px;
   border: 2px solid #000;
   margin: 20px 0px;
-  background: #4286f4;
+  background: rgb(66, 134, 244, 0.85);
   padding: 0px 5px;
   display: flex;
   width: 50%;
