--- a/src/components/random.css
+++ b/src/components/random.css
@@ -83,8 +83,6 @@ body {
   background-position: center;
 }
 
-
-
 #music-videos {
   background-image: url("images/bg2.gif");
   background-repeat: no-repeat;
@@ -107,4 +105,14 @@ body {
   background-position: center;
 }
 
-
+.random-form {
+  position: relative;
+  right: 13%;
+  top: 10px;
+  margin-bottom: 10px;
+}
+.random-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
